--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet"
           href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
 
-    <title>React App</title>
+    <title>Todo List App</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
